--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,13 @@
 @import '/src/scss/themes/theme-light.scss';
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
+
+
+img[height="250px"]{
+	object-fit: cover;
+}
+
+
 html {
 	font-size: 62.5%;
 	-webkit-font-smoothing: antialiased;
