--- a/src/scss/dark-slider.scss
+++ b/src/scss/dark-slider.scss
@@ -440,6 +440,9 @@ $content-background-color: #8C8C8C;
   }
 }
 
+//
+
+
 @keyframes slideFromLeft {
   from {
     transform: translate3d(-100%, 0, 0);
